--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
+```html
 <!doctype html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NovaSleep – Wake-Mask mit Dawn-Simulation</title>
+  <title>Insomniaq – Wake-Mask mit Dawn-Simulation</title>
   <meta name="description" content="Blackout-Schlafmaske mit sanfter Dawn-Simulation zum Aufwachen. Optionales Dream-Lab mit Licht-Cues und App-Routinen." />
   <meta name="robots" content="index,follow" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <header class="topbar">
     <div class="container topbar-inner">
-      <a class="brand" href="#top">NovaSleep</a>
+      <a class="brand" href="#top">Insomniaq</a>
       <nav class="nav">
         <a href="#produkt">Produkt</a>
         <a href="#zielgruppe">Zielgruppen</a>
@@ -33,7 +34,7 @@
           <p class="kicker">Phase 1: Realistisch. Robust. Komfortabel.</p>
           <h1>Sanft aufwachen – mit Dawn-Simulation direkt in der Schlafmaske.</h1>
           <p class="lead">
-            Eine Blackout-Maske mit integriertem Licht-Weck-Programm und App-Routinen.
+            Insomniaq ist eine Blackout-Maske mit integriertem Licht-Weck-Programm und App-Routinen.
             Optional: ein experimentelles Dream-Lab mit Licht-Cues für Interessierte.
           </p>
           <div class="cta-row">
@@ -53,7 +54,7 @@
           <div class="card-header">
             <div class="logo-mark" aria-hidden="true"></div>
             <div>
-              <div class="card-title">NovaSleep Wake-Mask</div>
+              <div class="card-title">Insomniaq Wake-Mask</div>
               <div class="card-subtitle">Dawn-Wake als Kernnutzen</div>
             </div>
           </div>
@@ -181,7 +182,7 @@
         <h2>FAQ (prüfungs- und markttauglich)</h2>
         <details class="faq">
           <summary>Ist das ein medizinisches Gerät?</summary>
-          <p>Nein. NovaSleep ist ein Lifestyle-/Wellbeing-Produkt und ersetzt keine Diagnostik oder Behandlung.</p>
+          <p>Nein. Insomniaq ist ein Lifestyle-/Wellbeing-Produkt und ersetzt keine Diagnostik oder Behandlung.</p>
         </details>
         <details class="faq">
           <summary>Funktioniert der Lucid-Mode garantiert?</summary>
@@ -233,7 +234,7 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <span>© <span id="y"></span> NovaSleep</span>
+      <span>© <span id="y"></span> Insomniaq</span>
       <span class="footer-links">
         <a href="#top">Nach oben</a>
         <a href="#faq">FAQ</a>
@@ -246,3 +247,5 @@
   </script>
 </body>
 </html>
+```
+
