--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <video class="promo-video" controls playsinline preload="metadata">
             <!-- Wenn die Datei in /assets liegt und NICHT umbenannt wurde -->
-            <source src="assets/Somniaq%20Promo%20Clip%202.mp4" type="video/mp4">
+            <source src="Assets/promo.mp4" type="video/mp4">
             Dein Browser unterstützt das Video-Tag nicht.
           </video>
 
