--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <body>
   <header class="topbar">
     <div class="container topbar-inner">
-      <a class="brand" href="#top">Insomniaq</a>
+      <a class="brand" href="#top">
+  <img class="brand-logo" src="assets/img/logo.png" alt="Somniaq Logo">
+  <span>Somniaq</span>
+</a>
+
       <nav class="nav">
         <a href="#produkt">Produkt</a>
         <a href="#zielgruppe">Zielgruppen</a>
