--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <header class="topbar">
     <div class="container topbar-inner">
-      <a class="brand" href="#top">
-  <img class="brand-logo" src="assets/img/logo.png" alt="Somniaq Logo">
-  <span>Somniaq</span>
+<a class="brand" href="#top">
+  <img src="logo.png" alt="Insomniaq Logo" class="brand-logo">
 </a>
+
 
       <nav class="nav">
         <a href="#produkt">Produkt</a>
