--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="topbar">
     <div class="container topbar-inner">
       <a class="brand" href="#top">
-        <img src="logo.png" alt="Insomniaq" class="brand-logo" />
+        <img src="assets/img/logo.png" alt="Insomniaq" class="brand-logo" />
         <span class="brand-name">Insomniaq</span>
       </a>
 
