--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container topbar-inner">
       <!-- LOGO: Erwartet logo.png im Repo-Root (neben index.html) -->
       <a class="brand" href="#top">
-        <img src="logo.png" alt="Insomniaq" class="brand-logo" />
+        <img src="assets/img/logo.png" alt="Insomniaq" class="brand-logo" />
         <span class="brand-name">Insomniaq</span>
       </a>
 
