--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="card-header">
             <!-- LOGO in der Karte: ebenfalls logo.png im Root -->
             <div class="logo-mark" aria-hidden="true">
-              <img src="logo.png" alt="" class="card-logo" />
+              <img src="assets/img/logo.png" alt="" class="card-logo" />
             </div>
             <div>
               <div class="card-title">Insomniaq – Promo</div>
